--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "aws-amplify-react-native": "^1.0.5",
     "expo": "^27.0.1",
     "react": "16.3.1",
-    "react-native": "~0.55.2",
-    "react-navigation": "^2.11.2"
+    "react-native": "https://github.com/expo/react-native/archive/sdk-28.0.0.tar.gz",
+    "react-navigation": "^2.11.2",
+    "react-router-native": "^4.3.0"
   }
 }
