--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "aws-amplify": "^1.0.5",
     "aws-amplify-react-native": "^1.0.5",
     "expo": "^27.0.1",
+    "history": "^4.7.2",
     "react": "16.3.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-28.0.0.tar.gz",
+    "react-native-elements": "^0.19.1",
     "react-navigation": "^2.11.2",
     "react-router-native": "^4.3.0"
   }
